Moved survey additional information into a localized partial, which makes it easier to add markup toa the content (e.g., the link to BAG). Removed corresponding keys from the locales. Added a bit of extra padding to the survey info box.

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -47,12 +47,9 @@ ageRanges:
       <li><%= link_to t(:aboutTheStudy), '/study_info.html', target: "_blank" %></li>
       <li><%= link_to t(:consentInformation), '/consent.html', target: "_blank" %></li>
     </ul>
-    <div class="survey_additional_header"><%= t(:surveyAdditionalInformationHeader) %>
-    </div>
-    <div class="survey_additional"><%= t(:surveyAdditionalInformation) %>
-    </div>
-    <div class="survey_additional_part2">
-      <%= t(:surveyAdditionalInformationPartTwo) %>
+
+    <div class="survey_additional_container">
+      <%= partial "localizable/partials/home_more" %>
     </div>
 
     <!--
