--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -631,6 +631,10 @@ section.map {
   vertical-align: bottom;
 }
 
+.survey_additional_container {
+  margin-bottom: 2em;
+}
+
 .survey_additional_header {
   margin: 10px;
 }
