implemented further requests for change made by ethics

--- a/source/localizable/study_info.html.erb
+++ b/source/localizable/study_info.html.erb
@@ -2,7 +2,7 @@
 <%= partial "partials/homelink" %>
 <div class="container">
   <section class="subpage">
-    <h1>Information für Teilnehmer</h1>
+    <h1>Information für Teilnehmende</h1>
 
     <p>
       <strong>Studientitel: </strong>
@@ -11,7 +11,7 @@
 
     <p>
       <strong>Studienziele</strong>
-      Ziel dieser Studie ist es, anonymisierte personenbezogene Gesundheitsdaten einer breiten schweizer Öffentlichkeit zu COVID-19 zu sammeln. Diese Daten werden verwendet, um Änderungen der Schweizer Gesundheitssituation in Echtzeit zu überwachen und darzustellen und können dazu beitragen, Vorhersagemodelle zu erstellen, die möglicherweise bei der Entwicklung von Maßnahmen zur Minderung der Pandemie hilfreich sein könnten.
+      Ziel dieser Studie ist es, anonymisierte Gesundheitsdaten einer breiten Schweizer Öffentlichkeit zu COVID-19 zu sammeln. Diese Daten werden verwendet, um Änderungen der Schweizer Gesundheitssituation in Echtzeit zu überwachen und darzustellen und können dazu beitragen, Vorhersagemodelle zu erstellen, die möglicherweise bei der Entwicklung von Maßnahmen zur Minderung der Pandemie hilfreich sein könnten.
     </p>
 
     <p>
@@ -22,7 +22,7 @@
 
     <p>
       <strong>Teilnahmebedingungen</strong>
-      Jede natürliche Person mit einem Alter von 18 Jahren oder darüber ist zur Teilnahme an der Studie berechtigt. Eine/e Teilnehmer/in kann die Daten entweder für sich selbst oder als Elternteil oder gesetzlicher Vormund für eine Person jünger als 18 Jahre eingeben.
+      Jede Person mit einem Alter von 18 Jahren oder darüber ist zur Teilnahme an der Studie berechtigt. Eine/e Teilnehmer/in kann die Daten entweder für sich selbst oder als Elternteil oder gesetzlicher Vormund für eine Person jünger als 18 Jahre eingeben.
     </p>
 
     <p>
