Adds migration code handling. Removes left indent on manual participant code box. Fixes a bunch of small issues with clearing forms.

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -83,7 +83,7 @@ ageRanges:
           <select id="participantCodeList" name="participantCodeList" class="dropdown">
             <option value="__none__"><%= t(:unlistedCode) %></option>
           </select>
-          <div id="participantCodeManualBox" class="input-wrap input-wrap--text hidden">
+          <div id="participantCodeManualBox" style="margin-top: 10px;" class="hidden">
             <label class="label" for="participantCodeManual"><%= t(:manualParticipantCode) %></label>
             <input id="participantCodeManual" name="participantCodeManual" class="input input--short">
           </div>
