--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -1,22 +1,14 @@
 <div class="navigation">
   <div class="navigation__inner">
     <ul class="lang-nav">
-      <li><a href="/" data-lang="de" class="js-setLang langlink ml-4<% if I18n.locale == :de %> active<% end %>">Deutsch</a></li>
-      <li><a href="/fr" data-lang="fr" class="js-setLang langlink ml-4<% if I18n.locale == :fr %> active<% end %>">Français</a></li>
-      <li><a href="/it" data-lang="it" class="js-setLang langlink ml-4<% if I18n.locale == :it %> active<% end %>">Italiano</a></li>
-      <li><a href="/en" data-lang="en" class="js-setLang langlink ml-4<% if I18n.locale == :en %> active<% end %>">English</a></li>
+      <li><a href="/<%= curPageWithoutLang %>" data-lang="de" class="js-setLang langlink ml-4<% if I18n.locale == :de %> active<% end %>">Deutsch</a></li>
+      <li><a href="/fr/<%= curPageWithoutLang %>" data-lang="fr" class="js-setLang langlink ml-4<% if I18n.locale == :fr %> active<% end %>">Français</a></li>
+      <li><a href="/it/<%= curPageWithoutLang %>" data-lang="it" class="js-setLang langlink ml-4<% if I18n.locale == :it %> active<% end %>">Italiano</a></li>
+      <li><a href="/en/<%= curPageWithoutLang %>" data-lang="en" class="js-setLang langlink ml-4<% if I18n.locale == :en %> active<% end %>">English</a></li>
     </ul>
     <nav class="main-nav">
       <ul>
         <li><%= link_to 'Home', '/index.html' %></li>
-        <%
-=begin
-%>
-        <li><%= link_to 'About', '/study_info.html', target: "_blank" %></li>
-        <li><%= link_to 'Consent', '/consent.html', target: "_blank" %></li>
-<%
-=end
-%>
         <li><%= link_to '<img class="map-icon" src="/images/map-outline.svg" alt="Map image"> Map', '/map.html' %></li>
         <li><%= link_to 'Blog', 'https://covid19survey.ethz.ch/blog', target: "_blank" %></li>
         <li><%= link_to 'FAQ', '/faq.html' %></li>
