--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -10,7 +10,7 @@
       <ul>
         <li><%= link_to 'Home', '/index.html' %></li>
         <li><%= link_to '<img class="map-icon" src="/images/map-outline.svg" alt="Map image"> Map', '/map.html' %></li>
-        <li><%= link_to 'Blog', '/blog' %></li>
+        <li><%= link_to 'Blog', '/blog/index.html' %></li>
         <li><%= link_to 'FAQ', '/faq.html' %></li>
       </ul>
     </nav>
