Fixed frontend posting URL.

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -10,8 +10,8 @@ ageRanges:
   - 71-80
   - 81-90
   - 90+
-# formTarget: https://covid-stage.apps-customer.210235761750.ninegcp.ch/form
-formTarget: http://localhost:5000/form
+formTarget: https://covid-stage.apps-customer.210235761750.ninegcp.ch/form
+# formTarget: http://localhost:5000/form
 ---
 <div class="message hidden" id="msg-error">
   <div class="container">
