changed language on response page with localizations. added participation code to it, fr, de pages.

--- a/source/localizable/response.en.html.erb
+++ b/source/localizable/response.en.html.erb
@@ -5,9 +5,12 @@
     <h2>Thanks!</h2>
     <p>Thank you for answering our questionnaire. Together we are stronger.</p>
 
-    <p>Your participation code is: <span id="yourCodeHere" class="code"></span></p>
+    <div class="boxed code-chooser" style="padding: 0 0 0 20px;">
+      <p>Your participation code is: <span id="yourCodeHere" class="code"></span></p>
+    </div>
 
-    <p>Please fill out the form again, if:</p>
+    <p>Remember this code if you need to fill out a survey on another device.</p>
+    <p>Please come back tomorrow to fill out the survey again, especially if:</p>
     <ul class="list">
       <li>One of the symptoms occurs</li>
       <li>You have tested positive for the coronavirus</li>
