--- a/source/localizable/response.fr.html.erb
+++ b/source/localizable/response.fr.html.erb
@@ -4,13 +4,19 @@
   <section class="subpage">
     <h2>Merci !</h2>
     <p>Merci beaucoup d’avoir répondu à ces questions. Ensemble, nous sommes plus forts.</p>
-    <p>Nous vous prions instamment de remplir à nouveau ce questionnaire si :
+    <div class="boxed code-chooser" style="padding: 0 0 0 20px;">
+      <p>Votre code de participant est: <span id="yourCodeHere" class="code"></span></p>
+    </div>
+    
+    <p>N'oubliez pas ce code si vous devez remplir une enquête sur un autre appareil.</p>
+
+
+    <p>Veuillez revenir demain pour répondre à nouveau au sondage, surtout si:  </p>
       <ul>
         <li>l’un des symptômes décrits se manifeste</li>
         <li>vous êtes testé-e positif/positive au Covid-19</li>
         <li>vous devez rester en quarantaine.</li>
       </ul>
-    </p>
     <p>Plus il y aura de personnes répondant régulièrement à ce questionnaire, plus la campagne démontrera son utilité. Merci de bien vouloir le transmettre à votre entourage, en aidant au besoin les personnes âgées qui auraient des difficultés à le remplir. Et prenez bien soin de vous !</p>
 
     <p>Voici un chat au hasard en guise de remerciement:</p>
