--- a/source/localizable/response.html.erb
+++ b/source/localizable/response.html.erb
@@ -4,7 +4,13 @@
   <section class="subpage">
     <h2>Danke!</h2>
     <p>Vielen Dank, dass Sie diese Fragen beantwortet haben. Gemeinsam sind wir stärker.</p>
-    <p>Bitte füllen Sie diesen Fragebogen unbedingt erneut aus, wenn:</p>
+    <div class="boxed code-chooser" style="padding: 0 0 0 20px;">
+      <p>Ihr Teilnehmercode lautet: <span id="yourCodeHere" class="code"></span></p>
+    </div>
+
+    <p>Bitte notieren Sie diesen Code und halten Sie ihn bereit, für den Fall dass Sie diese Umfrage auf einem anderen Endgerät ausfüllen wollen</p>
+
+    <p>Bitte nehmen Sie sich die Zeit, die Umfrage auch morgen wieder auszufüllen, insbesondere wenn:</p>
     <ul class="list">
       <li>Eines der genannten Symptome auftritt</li>
       <li>Sie positiv auf Covid-19 getestet werden</li>
