--- a/source/localizable/response.it.html.erb
+++ b/source/localizable/response.it.html.erb
@@ -4,13 +4,18 @@
   <section class="subpage">
     <h2>Grazie!</h2>
     <p>La ringraziamo per aver risposto alle nostre domande. Uniti, siamo più forti.</p>
-    <p>La preghiamo di compilare di nuovo il presente modulo nel caso in cui:
+
+    <div class="boxed code-chooser" style="padding: 0 0 0 20px;">
+      <p>Il suo codice partecipante è: <span id="yourCodeHere" class="code"></span></p>
+    </div>
+    <p>Ricordi questo codice se deve compilare un questionario su un altro dispositivo.</p>
+
+    <p>Torni domani per compilare nuovamente il questionario, soprattutto se: </p>
       <ul>
         <li>si verifichi uno qualsiasi dei sintomi di cui sopra</li>
         <li>sia risultato/a positiva al test del Covid-19</li>
         <li>si trovi in quarantena</li>
       </ul>
-    </p>
     <p>Più persone partecipano regolarmente al sondaggio, maggiori sono i vantaggi della campagna. La preghiamo perciò di diffondere il più possibile il sistema di tracciamento nella cerchia dei suoi conoscenti. Aiuti le persone anziane a compilare il modulo. E stia in salute!</p>
 
     <p>Ecco un gatto a caso come ringraziamento:</p>
