Added links to the FAQ page to the ethics agreement and study information pages.

--- a/source/localizable/faq.html.erb
+++ b/source/localizable/faq.html.erb
@@ -9,12 +9,14 @@
     </p>
     <h3 class="faq__question">Was ist das Ziel der Kampagne?</h3>
     <p>Ziel des Covid-19-Trackers ist es, in kurzer Zeit möglichst viele Daten von gesunden und infizierten Personen in der Schweiz zusammentragen. Diese Daten sollen unter anderem dazu dienen, ein differenziertes Bild der Corona-Situation zu erhalten.</p>
+    <p> <%= link_to t(:aboutTheStudy), '/study_info.html', target: "_blank" %> </p>
     <h3 class="faq__question">Wie hilft das Sammeln der Daten bei der Bekämpfung der Corona-Krise?</h3>
     <p>Die Informationen zur Corona-Situation in der Schweiz sind schwer zu koordinieren und schwer zusammenzutragen. Flächendeckende Tests sind keine Option. Jedes zusätzliche Stück Information kann daher helfen, die Ausbreitung des Virus zu stoppen.<br>Die mittels Covid-19-Tracker gesammelten Daten enthalten die Postleitzahl sowie eine Selbsteinschätzung der antwortenden Personen. Regionen, in denen besonders viele potenzielle Krankheitsfälle vorkommen, können so erkannt werden. Dies ermöglicht gezielte Massnahmen seitens der Behörden.</p>
     <h3 class="faq__question">Ist die Kampagne wissenschaftlich abgestützt?</h3>
     <p>Der aktuelle Fragebogen der Studie wurde von der ETH Zürich entwickelt. Auch die Gesundheitsdirektion des Kantons Bern bestätigt das dringende Bedürfnis nach möglichst umfassenden Informationen aus der Bevölkerung, um die Epidemie zu bekämpfen. Wissenschaftliche Untersuchungen (u.a. von Dr. Jan von Overbeck) stützen ein Vorgehen, wie es mit dem Covid-19-Tracker nun umgesetzt wird.</p>
     <h3 class="faq__question">Was geschieht mit meinen Daten?</h3>
     <p>Die Daten, die mittels Covid-19-Tracker gesammelt werden, erlauben keine Rückschlüsse auf Personen. Sie enthalten Postleitzahl, Alter, Geschlecht und einige weitere Informationen, jedoch weder Namen, noch sonstige personenbezogenen Daten.</p>
+    <p><%= link_to t(:consentInformation), '/consent.html', target: "_blank" %></p>
     <h3 class="faq__question">Werden die Daten nicht verfälscht, wenn beispielsweise in vernetzten Gebieten wie Städten mehr Personen den Fragebogen ausfüllen?</h3>
     <p>Dieser geografische Bias kann korrigiert werden indem auch gesunde Personen den Fragebogen ausfüllen. Die Anzahl infizierter Personen kann so durch die Grundgesamtheit dividiert werden. Die resultierende Prozent- oder Promillezahl hat eine höhere Aussagekraft.</p>
   </section>
