--- a/source/localizable/faq.it.html.erb
+++ b/source/localizable/faq.it.html.erb
@@ -7,12 +7,14 @@
     <p>Il tracciamento del Covid-19 è stato implementato da diversi ricercatori e sviluppatori di software indipendenti, con il sostegno del Dipartimento della sanità del Canton Berna.</p>
     <h3 class="faq__question">Qual è l’obiettivo della campagna?</h3>
     <p>L’obiettivo del tracciamento del Covid-19 è quello di raccogliere in Svizzera, in tempi brevi, il maggior numero possibile di dati sulle persone sane e sulle persone positive al coronavirus. Tali dati dovrebbero essere finalizzati, tra l’altro, a ottenere un quadro differenziato della situazione del coronavirus.</p>
+    <p> <%= link_to t(:aboutTheStudy), '/study_info.html', target: "_blank" %> </p>
     <h3 class="faq__question">In che modo la raccolta dei dati contribuirà a combattere la crisi del coronavirus?</h3>
     <p>In Svizzera, le informazioni sulla situazione del coronavirus sono difficili da coordinare e difficili da raccogliere. L’esecuzione di test a tappeto non è un’alternativa valida. Qualsiasi informazione aggiuntiva può dunque contribuire ad arrestare la diffusione del virus.<br>I dati raccolti dal tracciamento del Covid-19 contemplano il numero postale di avviamento, nonché un’autovalutazione da parte degli intervistati. Sarà così possibile identificare le regioni con un numero particolarmente elevato di potenziali casi di malattia. Questo consentirà alle autorità di attuare delle misure mirate e locali.</p>
     <h3 class="faq__question">Questa campagna ha un fondamento scientifico?</h3>
     <p>La campagna è stata sviluppata in collaborazione con il sostegno del Dipartimento della sanità del Canton Berna. Entrambe le istituzioni attestano l’urgente necessità di ricevere quante più informazioni possibili dalla popolazione per poter combattere l’epidemia. Esistono degli studi scientifici (compresi quelli del dottor Jan von Overbeck), che supportano una procedura come quella attualmente in corso di implementazione con il tracciamento del Covid-19.</p>
     <h3 class="faq__question">Che ne sarà dei miei dati?</h3>
     <p>I dati raccolti attraverso il tracciamento del Covid-19 non consentono di trarre conclusioni sull’identità delle persone. I dati contemplano il numero postale di avviamento, l’età, il sesso e altre informazioni, senza che siano riportati nomi, né altri dati personali.<br>I dati vengono salvati su server svizzeri.</p>
+    <p><%= link_to t(:consentInformation), '/consent.html', target: "_blank" %></p>
     <h3 class="faq__question">Non si verifica l’alterazione dei dati se, ad esempio, il questionario viene compilato da più persone in aree collegate in rete, come le città?</h3>
     <p>Per poter correggere questo bias geografico è necessario che il questionario sia compilato anche dalle persone sane. Il numero di persone infette può così essere suddiviso sull’intera popolazione. La cifra percentuale o per mille che ne risulta è più significativa.</p>
   </section>
