replaced data protection link on footer with the participation info sheet and the ethics.

--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -4,7 +4,11 @@
       <li><%= link_to 'Map', '/map.html' %></li>
       <li><%= link_to 'FAQ', '/faq.html' %></li>
       <li><%= link_to t(:imprint), '/imprint.html' %></li>
+      <!--
       <li><%= link_to t(:dataProtection), '/dataprotection.html' %></li>
+      -->
+      <li><%= link_to t(:aboutTheStudy), '/study_info.html', target: "_blank" %></li>
+      <li><%= link_to t(:consentInformation), '/consent.html', target: "_blank" %></li>
     </ul>
   </div>
 </footer>
