info about merge with ETH

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -10,6 +10,7 @@
     <div>
       <%= partial "partials/icon" %>
       <h1 class="hero__headline"><%= t(:title) %></h1>
+      <p><i>Info: We are currently joining forces with ETH to create a unified platform, see <a href="https://www.be.ch/portal/de/index/mediencenter/medienmitteilungen.meldungNeu.mm.html/portal/de/meldungen/mm/2020/04/20200408_0901_die_eth_zuerich_undderkantonbernentwickelngemeinsamdencovid-19sy" target="_blank">press release</a>.</i></p>
       <%= t(:introduction) %>
       <p><%= link_to t(:seemore), '/faq.html' %></p>
       <p><a target="_blank" rel="noreferrer" href="<%= t(:pressReleaseLink) %>"><%= t(:pressRelease) %></a></p>
