--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= t(:title) %></title>
+    <%= stylesheet_link_tag "modalise" %>
     <%= stylesheet_link_tag "site" %>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/images/meta/apple-touch-icon.png">
@@ -53,6 +54,7 @@
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=Element.prototype.dataset%2Cdocument.querySelector%2CArray.prototype.includes"></script>
     <%= javascript_include_tag "date-input-polyfill.min" %>
+    <%= javascript_include_tag "modalise.min" %>
     <%= javascript_include_tag "persistence" %>
     <%= javascript_include_tag "site" %>
   </body>
