--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -10,8 +10,6 @@ ageRanges:
   - 71-80
   - 81-90
   - 90+
-formTarget: https://covid-stage.apps-customer.210235761750.ninegcp.ch/form
-# formTarget: http://localhost:5000/form
 ---
 <div class="message hidden" id="msg-error">
   <div class="container">
@@ -26,7 +24,7 @@ formTarget: https://covid-stage.apps-customer.210235761750.ninegcp.ch/form
       <%= partial "partials/icon" %>
       <h1 class="hero__headline"><%= t(:title) %></h1>
       <%= t(:introduction) %>
-      <p><%= link_to t(:seemore), '/faq.html' %></p>
+      <p><%= link_to t(:seemore), '/faq.html' %> - <%= partial("localizable/partials/mailinglist", :locals => { :name => "mailing_list" }) %></p>
       <p><a target="_blank" rel="noreferrer" href="<%= t(:pressReleaseLink) %>"><%= t(:pressRelease) %></a></p>
       <a href="#form" class="btn btn--inv"><%= t(:toform) %></a>
     </div>
@@ -54,7 +52,7 @@ formTarget: https://covid-stage.apps-customer.210235761750.ninegcp.ch/form
       <%= partial "localizable/partials/home_more" %>
     </div>
 
-    <form action="<%= current_page.data.formTarget %>" onsubmit="persistForm()" method="post" id="covid-form">
+    <form action="<%= config[:api_url] %>/form" onsubmit="persistForm()" method="post" id="covid-form">
       <div class="boxed code-chooser">
         <!-- ---------------------------------------------------------
         --- first-time survey?
