--- a/source/localizable/response.html.erb
+++ b/source/localizable/response.html.erb
@@ -23,6 +23,9 @@
     <div id="randomKittenBox"></div>
 
     <div class="response-share">
+      <div style="text-align: center; margin-bottom: 20px;">
+        <%= partial("localizable/partials/mailinglist", :locals => { :name => "mailing_list" }) %>
+      </div>
       <%= partial "partials/social" %>
     </div>
   </section>
