--- a/source/localizable/response.fr.html.erb
+++ b/source/localizable/response.fr.html.erb
@@ -25,7 +25,7 @@
 
     <div class="response-share">
       <div style="text-align: center; margin-bottom: 20px;">
-        <%= partial("localizable/partials/mailinglist", :locals => { :name => "mailing_list" }) %>
+        <%= partial "localizable/partials/mailinglist" %>
       </div>
       <%= partial "partials/social" %>
     </div>
