fixed heading / subheadings

--- a/source/blog/posts/2020-04-11/de.html.erb
+++ b/source/blog/posts/2020-04-11/de.html.erb
@@ -1,8 +1,8 @@
 ---
-title: Gemeinsam sind wir stark - Vereint im Kampf gegen COVID-19
+title: Gemeinsam sind wir stark
 author: Andre Kahles
 ---
-<h4>Gemeinsam sind wir stark - Vereint im Kampf gegen COVID-19</h4>
+<h4>Vereint im Kampf gegen COVID-19</h4>
 
 <p>
 Kaum hatten wir unsere ersten Fragebögen online geschaltet, fanden wir uns auch schon in bester Gesellschaft. Es hatten sich auch andere Teams zusammengefunden und Tracker ins Internet gestellt. Ihr Ziel: anonym Gesundheitsdaten zu sammeln um damit besser Modelle zu bauen und eine besser Daten-Grundlage für Entscheidungen über die öffentliche Gesundheit zu schaffen. Das war doch auch unser Ziel! Es war sehr motivierend zu sehen, wie viele andere Menschen hier Initiative zeigten und dabei oftmals (und gern) ihre Freizeit für eine gute Sache opferten. Doch bei allem Positiven hatte die Sache leider auch einen Haken. Viele Teilnehmer sprachen uns an, weil es Verwirrung stiftete, dass es plötzlich mehrere Plattformen gab. Sollten sie den Fragebogen mehrmals ausfüllen? Auf welche Art hängen die Fragen der Einzelnen Portale zusammen? Werden die Daten miteinander geteilt? Wäre es schlimm (oder sogar erwünscht) die Fragebögen auf mehreren Plattformen auszufüllen? Diese und viele weitere Fragen erreichten uns täglich und wir sahen schnell ein, dass es wenig Sinn ergab die Schweizer Öffentlichkeit darum zu bitten ihre Daten mehrfach bei verschiedenen Umfragen abzugeben. Was sollten wir also tun?
