--- a/source/blog/posts/2020-04-11/fr.html.erb
+++ b/source/blog/posts/2020-04-11/fr.html.erb
@@ -1,8 +1,8 @@
 ---
-title: Stronger together - Joining forces to fight COVID-19
+title: Stronger together
 author: Andre Kahles
 ---
-<h4>Stronger together - Joining forces to fight COVID-19</h4>
+<h4>Joining forces to fight COVID-19</h4>
 <div class="alert alert-primary text-center font-italic">Si vous pouvez nous aider à traduire, contactez-nous.</div>
 
 <p>
