added English corrections

--- a/source/localizable/faq.en.html.erb
+++ b/source/localizable/faq.en.html.erb
@@ -6,14 +6,14 @@
     <h3 class="faq__question">Who is behind this project?</h3>
     <p>The COVID-19 tracker was created by several independent researchers and software developers in collaboration with the health department of the Canton of Bern.</p>
     <h3 class="faq__question">What is the goal of the campaign?</h3>
-    <p>The aim of the COVID-19 tracker is to collect as much data as possible from healthy and infected people in Switzerland in a short time. Among other things, this data is intended to provide a differentiated picture of the corona situation in our country.</p>
+    <p>The aim of the COVID-19 tracker is to collect as much data as possible as quickly as possible from both healthy and infected people in Switzerland. Among other things, this data is intended to provide a more detailed picture of the corona situation in different parts of our country.</p>
     <p> <%= link_to t(:aboutTheStudy), '/study_info.html', target: "_blank" %> </p>
     <h3 class="faq__question">How does data collection help to fight the corona crisis?</h3>
-    <p>The information about the corona situation in Switzerland is difficult to coordinate and thus it is difficult to get a bigger picture of the situation. Area-wide comprehensive tests are not an option. Any additional piece of information can therefore help to stop the virus from spreading. The data collected using the COVID-19 tracker contains the postcode and a self-assessment of the respondents. Regions with a particularly high number of potential illnesses can be identified in this way. This enables targeted measures to be taken by the authorities. </p>
+    <p>Information about the corona situation in Switzerland is difficult to coordinate and thus it is difficult to get a bigger picture of the situation. Comprehensive tests covering the whole country are not an option. Any additional information can therefore help to stop the virus from spreading.</p>
     <h3 class="faq__question">Is the campaign scientifically supported?</h3>
     <p>The campaign was developed in collaboration with the health department of the Canton of Bern. This confirms the urgent need for as much information as possible from the population to combat the epidemic. Scientific studies (by Dr. Jan von Overbeck, among others) support a procedure that is now being implemented with the COVID-19 tracker.</p>
     <h3 class="faq__question">What happens to my data?</h3>
-    <p>The data collected using the COVID-19 tracker does not allow any conclusions to be drawn about personalities. They contain the postcode, age, gender and some other information, but neither names nor other personal data. All data is transmitted encrypted</p>
+    <p>The data collected using the COVID-19 tracker does not allow any conclusions to be drawn about individuals. They contain the postcode, age, gender and some other information, but neither names nor other personal data. All data is transmitted encrypted</p>
     <h3 class="faq__question">Will the data not be biased if, for example, more people fill out the questionnaire in areas such as cities or other densely populated areas?</h3>
     <p>This geographic bias can be corrected by dividing the number of cases by the total submissions. The resulting percentage or per zip code is more meaningful.</p>
   </section>
