--- a/source/localizable/partials/home_more.en.html.erb
+++ b/source/localizable/partials/home_more.en.html.erb
@@ -1,7 +1,7 @@
 <h1 class="survey_additional_header">What you should know</h1>
 
 <p class="survey_additional">
-  The collected data from this survey will be used for displaying summary statistics and for epidemiological research. This survey is for everyone, not only for people who may have contracted SARS-CoV-2 (COVID-19). If you would like to answer for multiple members of your household (e.g., children), please fill one survey per person.
+The data collected from this survey will be used for displaying summary statistics and for epidemiological research. This survey is for everyone, not only for people who may have contracted SARS-CoV-2 (COVID-19). If you would like to answer for multiple members of your household (e.g., children), please complete one survey per person.
 </p>
 
 <p class="survey_additional_part2">
