--- a/source/localizable/study_info.en.html.erb
+++ b/source/localizable/study_info.en.html.erb
@@ -11,23 +11,25 @@
 
     <p>
       <strong>Study goals</strong>
-      The goal of this study is to collect personal health data related to the COVID-19 disease across the public in Switzerland. This data will be used to monitor and display changes in the Swiss health situation real-time and may help to build predictive models that could possibly assist in designing measures of mitigation of the pandemic.
+      The goal of this study is to collect personal health data related to the COVID-19 disease from across the community in Switzerland. This data will be used to monitor and display changes in the Swiss health situation in real time and will hopefully help to build predictive models that could assist in designing measures to mitigate the pandemic.
     </p>
 
     <p>
       <strong>Research procedure and schedule</strong>
-      The study is designed as an online survey. Non-identifying health information related to COVID-19 will be collected. Information will be aggregated per Zip-code area and made available publicly. Un-aggregated information will be made available to epidemiology researchers in Switzerland to improve the modeling of spread and evaluate the success rate of containment measures. Participants are encouraged to take the survey on a daily basis. Data collection will comprise at least one year, beginning in March 2020.
-
+      The study is designed as an online survey. Non-identifying health information related to COVID-19 will be collected. Information will be aggregated per Zip-code area and made available publicly. 
+      Non-aggregated information will be made available to epidemiology researchers in Switzerland to improve the modeling of spread and evaluate the success rate of containment measures.
+      Participants are encouraged to take the survey on a daily basis. 
+      Data collection will last for at least one year, beginning in March 2020.
     </p>
 
     <p>
       <strong>Conditions for participation</strong>
-      Any natural person of the age of 18 years or above can participate in the study. A participant can provide the data directly for him-/herself or as a parent or guardian on behalf of a person under the age of 18.
+      Any person of the age of 18 years or above can participate in the study. A participant can provide the data directly for him-/herself or as a parent or guardian on behalf of a person under the age of 18.
     </p>
 
     <p>
-      <strong>Benefits and Risks of participation</strong>
-      The benefits for participants are a more exact estimation of their local epidemiological risk with their zip-code area. It helps to inform and to plan any personal action. As this study is conducted anonymously, the risk of re-identifying participants is very small. Various measures, such as aggregation and k-anonymity, are taken to secure the de-identified data against re-identification attacks.
+      <strong>Benefits and risks of participation</strong>
+      The benefits for participants are a more exact correlation of their local epidemiological risk with their zip-code area. It helps to inform and to plan any personal action. As this study is conducted anonymously, the risk of re-identifying participants is very small. Various measures, such as aggregation and k-anonymity, are taken to secure the de-identified data against re-identification attacks.
     </p>
 
     <p>
@@ -42,17 +44,16 @@
 
     <p>
       <strong>Right of withdrawal</strong>
-      All participants can stop contributing to the study at any point in time without further notice to ETH or the study management. Anonymous data collected up to the time point of drop out, will remain part of the study data set.
-    </p>
+      All participants can stop contributing to the study at any point without notice to ETH or the study management team. Anonymous data collected up to the time of drop-out will remain part of the study data set.    </p>
 
     <p>
       <strong>Data protection</strong>
-      All obtained data will be stored safely on ETH servers in Switzerland and collected in an anonymous form. Participants will be assigned a random study code. No personally-identifying information is requested or collected.
+      All data will be collected anonymously and stored safely on ETH servers in Switzerland. Participants will be assigned a random study code. No personally-identifying information will be requested or collected.
     </p>
 
     <p>
       <strong>Insurance coverage</strong>
-      Possible damages to health, which are directly related to the study and are demonstrably the fault of ETH Zurich, are covered by the general liability insurance of ETH Zurich (Insurance Policy No. 30/4.078.362 of the Basler Versicherung AG). Beyond the before mentioned, the health insurance and the accident insurance (e.g., the commute to or from the study location) is the responsibility of the participant.
+      Any harm to health which is directly related to the study and is demonstrably the fault of ETH Zurich, is covered by the general liability insurance of ETH Zurich (Insurance Policy No. 30/4.078.362 of the Basler Versicherung AG). Other than the above-mentioned, health insurance and accident insurance (e.g. the commute to and from the study location) is the responsibility of the participant. 
     </p>
 
     <p>
