--- a/source/localizable/consent.en.html.erb
+++ b/source/localizable/consent.en.html.erb
@@ -18,18 +18,20 @@
       <strong>Study location: </strong><a href="https://covidtracker.ch">https://covidtracker.ch</a> (also available at <a href="http://covid19survey.ch">http://covid19survey.ch</a>)</p>
 
     <p>
-      <strong>Principal Investigator's Name and First Name:</strong> <a href="https://bmi.inf.ethz.ch/people/person/gunnar-raetsch/" target="_blank">Prof. Dr. Gunnar R&auml;tsch</a></p>
+      <strong>Principal Investigator's First Name and Surname:</strong> <a href="https://bmi.inf.ethz.ch/people/person/gunnar-raetsch/" target="_blank">Prof. Dr. Gunnar R&auml;tsch</a></p>
 
     <p><strong>Participant:</strong></p>
 
     <ul>
-      <li>I participate in this study on a voluntary basis and can withdraw from the study at any time without giving reasons and without any negative consequences.</li>
+      <li>I am participating in this study on a voluntary basis and can withdraw from the study at any time without giving reasons and without any negative consequences.</li>
       <li>I have been informed <a href="/study_info.html" target="_blank">in writing</a> about the aims and the procedures of the study, the advantages and disadvantages, as well as potential risks.</li>
       <li>I have read the written information for the volunteers. I am aware that I can direct all questions related to the study via e-mail to <a href="mailto:info@covid19survey.ch">info@covid19survey.ch</a>. My questions related to participating in the study have been answered satisfactorily. I have been given a copy of the <a href="/study_info.html" target="_blank">information for volunteers</a> and the <a href="/consent.html">consent form</a>.</li>
       <li>I was given sufficient time to make a decision about participating in the study.</li>
       <li>By checking the box at the end of the survey, I certify that I fulfill the requirements for participating in the study stated in the information for the volunteers.</li>
       <li>I agree that the responsible investigators and/or the members of the Ethics Commission have access to the original data under strictly observed rules of confidentiality.</li>
-      <li>I am aware that during the study, I have to comply with the requirements and limitations described in the information for volunteers. The investigators can, without mutual consent, exclude me from the study.</li>
+      <li>I am aware that during the study I have to comply with the requirements and constraints described in the information for volunteers. 
+      The investigators can, without my consent, exclude me from the study.
+      </li>
     </ul>
   </section>
 </div>
